--- a/chess_club/ratings/templates/ratings/base.html
+++ b/chess_club/ratings/templates/ratings/base.html
@@ -104,7 +104,7 @@
         </div>
     </nav>
     
-    <div class="container mt-5">
+    <div class="container" style="margin-top: 120px;">
         {% block content %}{% endblock %}
     </div>
     
